--- a/packages/vue/tsconfig.json
+++ b/packages/vue/tsconfig.json
@@ -1,7 +1,14 @@
 {
-  "extends": "../../base-config.json",
   "compilerOptions": {
-    "jsx": "preserve",
-    "strict": true
-  }
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "strict": true,
+    "target": "esnext",
+  },
+  "include": [
+    "src/**/*",
+    "docs/**/*",
+    "tests/**/*"
+  ]
 }
